--- a/style.css
+++ b/style.css
@@ -4,24 +4,45 @@ html {
 
 body {
     
-    background-color: black;
+    background-color: #fafafa;
     height: 100%;
 }
 
+h1 {
+    font-family: "Lucida Console", "Courier New", monospace;
+    text-align: center;
+    height: 5%;
+}
+
 .list {
-    height: 100%;
+    height: 85%;
     display: flex;
     flex-direction: row;
     align-items: center;
     justify-content: center;
 }
 
+hr {
+    border: none;
+    height: 3px;
+    background-color: #282828;
+  }
+
 
 .list div {
-    border: 2px solid;
-    border-radius: 20px;
+    
     margin: 50px;
-    background-color: white;
+    /*background-color: white;*/
     width: 200px;
     height: 200px;
 }
+
+footer {
+    font-family: "Lucida Console", "Courier New", monospace;
+    text-align: center;
+}
+
+img {
+    width:100%;
+    height: auto;
+  }
