--- a/style.css
+++ b/style.css
@@ -8,6 +8,12 @@ body {
     height: 100%;
 }
 
+hr {
+    border: none;
+    height: 3px;
+    background-color: #282828;
+}
+
 h1 {
     font-family: "Lucida Console", "Courier New", monospace;
     text-align: center;
@@ -22,16 +28,10 @@ h1 {
     justify-content: center;
 }
 
-hr {
-    border: none;
-    height: 3px;
-    background-color: #282828;
-  }
-
-
 .list div {
     
     margin: 50px;
+    transition: transform .2s;
     /*background-color: white;*/
     width: 200px;
     height: 200px;
@@ -45,4 +45,10 @@ footer {
 img {
     width:100%;
     height: auto;
-  }
+}
+
+.list div:hover {
+    -ms-transform: scale(1.5); /* IE 9 */
+    -webkit-transform: scale(1.5); /* Safari 3-8 */
+    transform: scale(1.5); 
+}
