--- a/style.css
+++ b/style.css
@@ -6,22 +6,27 @@ body {
     
     background-color: #fafafa;
     height: 100%;
+    background-image: url('imgs/back.png');
+    background-attachment: fixed;
+    background-size: cover;
 }
 
-hr {
-    border: none;
-    height: 3px;
-    background-color: #282828;
-}
-
-h1 {
+#txt {
+    color: rgb(255, 255, 255);
     font-family: "Lucida Console", "Courier New", monospace;
     text-align: center;
     height: 5%;
 }
 
+footer {
+    color: rgb(255, 255, 255);
+    font-family: "Lucida Console", "Courier New", monospace;
+    text-align: center;
+    height: 10%;
+}
+
 .list {
-    height: 85%;
+    height: 80%;
     display: flex;
     flex-direction: row;
     align-items: center;
@@ -30,16 +35,11 @@ h1 {
 
 .list div {
     
-    margin: 50px;
+    margin: 20px;
     transition: transform .2s;
     /*background-color: white;*/
     width: 200px;
-    height: 200px;
-}
-
-footer {
-    font-family: "Lucida Console", "Courier New", monospace;
-    text-align: center;
+    height: auto;
 }
 
 img {
@@ -51,4 +51,5 @@ img {
     -ms-transform: scale(1.5); /* IE 9 */
     -webkit-transform: scale(1.5); /* Safari 3-8 */
     transform: scale(1.5); 
+
 }
