--- a/style.css
+++ b/style.css
@@ -12,10 +12,11 @@ body {
 }
 
 #txt {
+    line-height: 75px;
     color: rgb(255, 255, 255);
     font-family: "Lucida Console", "Courier New", monospace;
     text-align: center;
-    height: 5%;
+    height: 15%;
 }
 
 footer {
@@ -25,8 +26,25 @@ footer {
     height: 10%;
 }
 
+.note {
+    height: 20%;
+    font-family: "Lucida Console", "Courier New", monospace;
+    font-size: 20px;
+    display: flex;
+    justify-content: center;
+}
+
+.note div {
+    color: rgb(96, 96, 96);
+    background-color: rgb(201, 232, 155);
+    width: 50%;
+    
+    text-align: center;
+    padding: 50px;
+}
+
 .list {
-    height: 80%;
+    height: 50%;
     display: flex;
     flex-direction: row;
     align-items: center;
