--- a/style.css
+++ b/style.css
@@ -1,5 +1,6 @@
 html {
     height: 95%;
+    overflow: hidden;
 }
 
 body {
@@ -12,6 +13,7 @@ body {
 }
 
 #txt {
+    z-index: 2;
     line-height: 75px;
     color: rgb(255, 255, 255);
     font-family: "Lucida Console", "Courier New", monospace;
@@ -70,4 +72,18 @@ img {
     -webkit-transform: scale(1.2); /* Safari 3-8 */
     transform: scale(1.2); 
 
+}
+
+.circle {
+    z-index: -1;
+    pointer-events: none;
+    position: absolute;
+
+    width:500px;
+    height: auto;
+
+    left:50%;
+    top:50%;
+
+    backface-visibility: hidden;
 }
